deployment/helm/06_apiserver_deployment.yaml
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: apiserver
  namespace: todo
  labels:
    app: apiserver
spec:
  replicas: 3
  selector:
    matchLabels:
      app: apiserver
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: apiserver
    spec:
      serviceAccountName: apiserver
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 50
              podAffinityTerm:
                topologyKey: "kubernetes.io/hostname"
                labelSelector:
                  matchExpressions:
                    - key: "app"
                      operator: In
                      values:
                        - apiserver
            - weight: 100
              podAffinityTerm:
                topologyKey: "failure-domain.beta.kubernetes.io/zone"
                labelSelector:
                  matchExpressions:
                    - key: "app"
                      operator: In
                      values:
                        - apiserver
      containers:
        - name: apiserver
          image: "apiserver:latest"
          imagePullPolicy: "Never"
          ports:
            - name: rest
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /ping
              port: rest
            initialDelaySeconds: 2
            periodSeconds: 5
          resources:
            {}
