deployment/helm/07_apiserver_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: apiserver
  namespace: todo
  labels:
    app: apiserver
spec:
  type: "NodePort"
  selector:
    app: apiserver
  ports:
    - name: rest
      port: 8080
      protocol: TCP
      targetPort: 8080
